--- a/src/css/style.css
+++ b/src/css/style.css
@@ -30,6 +30,10 @@ nav {
   position: relative;
   z-index: 2;
   padding: 2%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
 }
 
 nav .logo {
