--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -22,6 +22,10 @@ nav {
     position: relative;
     z-index: 2;
     padding: 2%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
 
     .logo {
         display: flex;
