--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -697,6 +697,17 @@ video {
                     margin-top: 5%;
                     font-size: 0.75rem;
                 }
+
+                h1 {
+                    font-size: 2.5rem;
+                }
+                h3 {
+                    font-size: 1.8rem;
+                }
+                p {
+                    font-size: 0.875rem;
+                }
+
                 h1, h3 , p {
                     color:  #fff;
                 }
@@ -710,6 +721,7 @@ video {
 
                 div {
                     margin-bottom: 5%;
+                    width: 90%;
                     p {
                         text-align: left;
                         color: #fff;
@@ -763,6 +775,15 @@ video {
                 .icon {
                     color: #F4BC4D;
                 }
+                h1 {
+                    font-size: 2.5rem;
+                }
+                h3 {
+                    font-size: 1.8rem;
+                }
+                p {
+                    font-size: 0.875rem;
+                }
 
                 h1, h3, p {
                     text-align: center;
@@ -778,6 +799,7 @@ video {
 
                 div {
                     margin-bottom: 5%;
+                    width: 90%;
                     p {
                         text-align: left;
                         color: #6E6E6E;
