--- a/src/css/style.css
+++ b/src/css/style.css
@@ -192,7 +192,7 @@ nav .bro .line2 {
 nav .login a {
   color: #223256;
   border-radius: 12px;
-  padding: 7px 10px;
+  padding: 10px 15px;
 }
 
 nav .login a:hover {
@@ -218,7 +218,7 @@ nav .login a::after {
 nav .request a {
   color: #223256;
   border-radius: 12px;
-  padding: 7px 10px !important;
+  padding: 10px 15px !important;
   background: #223256;
   color: #fff !important;
 }
@@ -516,7 +516,9 @@ video {
 .banner {
   background: #EBF3F3;
   width: 100%;
-  height: 500px;
+  padding-top: 5%;
+  padding-bottom: 5%;
+  margin-top: 3%;
 }
 
 .banner .banner-inner {
@@ -1204,8 +1206,8 @@ video {
 }
 
 .waitlist {
-  margin-top: 5%;
-  height: 400px;
+  padding-top: 5%;
+  padding-bottom: 5%;
   background: #fff;
 }
 
